--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -39,6 +39,6 @@
 
 </div>
 <div mat-dialog-actions [align]="'end'">
-    <button style="margin-left: 8px" mat-raised-button color="primary" (click)="addProduct()">Save</button>
+    <button style="margin-left: 8px" mat-raised-button color="primary" (click)="addProduct()">{{actionBtn}}</button>
     <button mat-raised-button color="warn" mat-dialog-close>Close</button>
 </div>
